--- a/范新东/summary/OP-TEE/v3.8.0.md
+++ b/范新东/summary/OP-TEE/v3.8.0.md
@@ -18,6 +18,7 @@
     - [userspace到kernelspace](#userspace到kernelspace)
     - [TEE driver到monitor态](#tee-driver到monitor态)
     - [TEE kernel space到TEE userspace](#tee-kernel-space到tee-userspace)
+    - [CA端的接口](#ca端的接口)
 
 # 文件结构
 | 根目录文件夹 | 简介 |
@@ -235,3 +236,10 @@ CA接口处在userspcae层面，整个调用过程需要经过kernel space层面
 
 完整的流程为：
 ![](../images/OPTEE/v3.8.0/TEEkernel_to_user.png)
+### CA端的接口
+在GP中规定的CA端接口较少，主要的是五个接口，分别如下：
++ `TEEC_InitializeContext`: 初始化TEE context，完成open tee driver，建立与TEE之间的contex
++ `TEEC_OpenSession`: 建立CA与TA之间的会话窗口
++ `TEEC_InvokeCommand`: 想TA发送执行请求来执行具体的操作
++ `TEEC_CloseSession`: 关闭CA与TA之间的会话窗口
++ `TEEC_FinalizeContext`: 清空建立的contex
